fixed menu overflow

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -66,3 +66,11 @@
   column-width: 60px;
   max-width: 600px;
 }
+
+.current-menu {
+  width: 100%;
+}
+.menu-container {
+  border: 2px solid hotpink;
+  overflow: hidden;
+}
